fix: business area card's text aligning fix

--- a/src/index.css
+++ b/src/index.css
@@ -171,12 +171,14 @@
   font-size: 1rem; /* 16px */
   line-height: 165%; /* 26.4px */
   font-weight: 400;
+  letter-spacing: -2%;
 }
 
 .body2 {
   font-size: 0.875rem; /* 14px */
   line-height: 145%; /* 20.3px */
   font-weight: 400;
+  letter-spacing: -2%;
 }
 
 /* Mobile responsive typography */
